# ft_irc

./: .dockerignore  .env  .env.example  .env.sentry.example  .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  Doxyfile  Makefile  README.md  codecov.yaml  docker-compose.loadgen.yaml  docker-compose.yaml  requirements.txt  test.cpp
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yaml  ci_build.yaml  cpp_ci.yml  cpp_test.yml  format_ci.yaml  site_deploy.yml
cmd/ft_irc/: main.cpp
config/: Commands.jp.txt  ngircd.conf  ngircd.conf.org
e2e/: Dockerfile  locustfile.py
pkg/application/: Server.cpp  Server.hpp  sample.cpp  sample.hpp
pkg/application/commands/: ACommands.cpp  ACommands.hpp  Cap.cpp  Cap.hpp  Invite.cpp  Invite.hpp  Join.cpp  Join.generated.cpp  Join.hpp  Kick.cpp  Kick.hpp  Mode.cpp  Mode.hpp  Nick.cpp  Nick.hpp  Part.cpp  Part.hpp  Pass.cpp  Pass.hpp  PassCommand.cpp  PassCommand.hpp  Ping.cpp  Ping.hpp  Pong.cpp  Pong.hpp  Privmsg.cpp  Privmsg.hpp  Quit.cpp  Quit.hpp  Topic.cpp  Topic.hpp  User.cpp  User.hpp
pkg/application/constants/: ExitStatus.hpp
pkg/application/dto/: MonitorSocketEventDTO.hpp  RecievedMsgDTO.cpp  RecievedMsgDTO.hpp  RunCommandsDTO.hpp  SendMsgDTO.cpp  SendMsgDTO.hpp  StartServerDTO.cpp  StartServerDTO.hpp
pkg/application/factory/: ServerFactory.hpp
pkg/application/serviceLocator/: ConfigsServiceLocator.hpp  InmemoryChannelDBServiceLocator.hpp  InmemoryClientDBServiceLocator.hpp  LoggerServiceLocator.cpp  LoggerServiceLocator.hpp  SocketHandlerServiceLocator.cpp  SocketHandlerServiceLocator.hpp
pkg/application/useCases/: AcceptConnectionUseCase.cpp  AcceptConnectionUseCase.hpp  LogggerUseCase.hpp  MonitorSocketEventsUseCase.cpp  MonitorSocketEventsUseCase.hpp  RecieveMsgUseCase.cpp  RecieveMsgUseCase.hpp  RemoveConnectionUseCase.cpp  RemoveConnectionUseCase.hpp  RunCommandsUseCase.cpp  RunCommandsUseCase.hpp  SendMsgFromServerUseCase.cpp  SendMsgFromServerUseCase.hpp  StartServerUseCase.cpp  StartServerUseCase.hpp
pkg/domain/channel/: ChanelData.hpp  ChanelInfo.cpp  ChanelInfo.hpp  Channel.cpp  Channel.hpp  ChannelClientList.cpp  ChannelClientList.hpp  ChannelData.cpp  ChannelData.hpp  ChannelId.cpp  ChannelId.hpp  ChannelMode.cpp  ChannelMode.hpp  ChannelService.cpp  ChannelService.hpp  ChannelTopic.cpp  ChannelTopic.hpp  IChanelRepository.hpp  IChannelAggregateRoot.hpp  IChannelRepository.hpp
pkg/domain/client/: Client.cpp  Client.hpp  ClientRepository.hpp  ClientService.cpp  ClientService.hpp  ConnectionInfo.cpp  ConnectionInfo.hpp  IClientAggregateRoot.hpp  IClientRepository.hpp  IClientServiceRepository.hpp  Password.hpp
pkg/domain/configs/: ChannelConfig.hpp  Configs.cpp  Configs.hpp  GlobalConfig.hpp  IConfigsRepository.hpp  LimitsConfig.hpp  OperatorConfig.hpp  OptionsConfig.hpp
pkg/domain/hash/: JenkinsHash.cpp  JenkinsHash.hpp  RFCChannelHash.cpp  RFCChannelHash.hpp
pkg/domain/message/: BaseMessage.cpp  BaseMessage.hpp  IMessageAggregateRoot.hpp  Message.cpp  Message.hpp  MessageConstants.hpp  MessageService.cpp  MessageService.hpp  MessageStream.hpp  MessageStreamVector.hpp  Parser.cpp  Parser.hpp  PrefixInfo.hpp
pkg/domain/server/: IServerAggregateRoot.hpp  IServerPasswordAggregateRoot.hpp  IServerRepository.hpp  IServerService.hpp  IServerServiceRepository.hpp  Server.cpp  Server.hpp  ServerConnection.cpp  ServerConnection.hpp  ServerPassword.cpp  ServerPassword.hpp  ServerService.cpp  ServerService.hpp
pkg/domain/shared/: IClientDatabaseRepository.hpp  ISocketHandler.hpp
pkg/infra/configs/: ConfigsLoader.cpp  ConfigsLoader.hpp
pkg/infra/database/: InmemoryChannelDatabase.cpp  InmemoryChannelDatabase.hpp  InmemoryClientDBServiceLocator.hpp  (+2 more)
pkg/interface/: entrypoint.cpp
pkg/presentation/: LogggerWrapper.hpp  entrypoint.cpp  entrypoint.hpp  parser.cpp  parser.hpp  signal.cpp  signal.hpp
pkg/tests/: CMakeLists.txt
pkg/tests/application/dto/: test_StartServerDTO.cpp
pkg/tests/application/serviceLocator/: test_LoggerServiceLocator.cpp
pkg/tests/application/useCases/: test_StartServerUseCase.cpp
pkg/tests/domain/: test_sample.cpp
pkg/tests/domain/channel/: test_Channel.cpp  test_ChannelClientList.cpp  test_ChannelId.cpp  test_ChannelTopic.cpp
pkg/tests/domain/client/: test_Client.cpp  test_Password.cpp
pkg/tests/domain/message/: test_BaseMessage.cpp  test_Message.cpp  test_MessageParser.cpp  test_MessageParserPrefix.cpp  test_Parser.cpp  test_ParserPrefix.cpp
pkg/tests/domain/server/: test_ServerPassword.cpp
pkg/tests/domain/shared/: test_JenkinsHash.cpp  test_RFCChannelHash.cpp  test_SHAHash.cpp
pkg/tests/infra/database/: test_InmemoryChannelDatabase.cpp  test_InmemoryClientDatabase.cpp
pkg/tests/infra/logger/: test_ConsoleLogger.cpp  test_FileLogger.cpp  test_MultiLogger.cpp
pkg/tests/infra/socket/: test_SocketHandler.cpp
pkg/tests/presentation/: test_entrypoint.cpp
tests/: CMakeLists.txt
tests/e2e/: JOIN.json  MODE_i.json  MODE_k.json  MODE_k_dev.json  MODE_l.json  MODE_o.json  MODE_t.json  NICK.json  PASS.json  PingPong.json  certification.json  certification_dev.json  irc_e2e.py  nick.json  pass.json  quit.json  testcases.json
tests/gtests/: CMakeLists.txt
tests/gtests/application/dto/: test_StartServerDTO.cpp
tests/gtests/application/useCases/: test_StartServerUseCase.cpp
tests/gtests/domain/channel/: test_ChannelClientList.cpp  test_ChannelTopic.cpp
tests/gtests/domain/hash/: test_RFCChannelHash.cpp
tests/gtests/domain/message/: test_Message.cpp  test_MessageParseParams.cpp  test_MessageParser.cpp
tests/gtests/domain/shared/: test_JenkinsHash.cpp
tests/gtests/infra/logger/: test_ConsoleLogger.cpp  test_MultiLogger.cpp
tests/gtests/infra/socket/: test_SocketHandler.cpp
tests/load-generator/: Dockerfile  locustfile.py  requirements.txt
tests/pkg/: test_sample.cpp
tools/: conftest.py  locustfile.py  test_basics.py
tools/bircd/: bircd.h  check_fd.c  clean_fd.c  client_read.c  client_write.c  do_select.c  get_opt.c  init_env.c  init_fd.c  main.c  main_loop.c  srv_accept.c  srv_create.c  x.c
tools/server/: server.cpp
(+27 files in other folders)
